eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/EventCase__c.object
<CustomObject>
    <fields>
        <fullName>CaseCode__c</fullName>
        <label>CaseCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseDescription__c</fullName>
        <label>CaseDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseQueue__c</fullName>
        <label>CaseQueue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseRecordType__c</fullName>
        <label>CaseRecordType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSLA__c</fullName>
        <label>CaseSLA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>EventCases</relationshipLabel>
        <relationshipName>EventCases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UseCaseDirector__c</fullName>
        <defaultValue>true</defaultValue>
        <label>UseCaseDirector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EventCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EventCase</label>
    <nameField>
        <label>EventCase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EventCases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>